--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
         <module>cdmlib-remote-webapp</module>
     </modules>
     <properties>
-	<vaadin.version>7.0.7</vaadin.version>
+<!--	<vaadin.version>7.0.7</vaadin.version> -->
+	<vaadin.version>7.1.3</vaadin.version>
 	<java.codelevel>1.6</java.codelevel>
         <spring.version>3.2.2.RELEASE</spring.version>
         <spring-security.version>3.1.3.RELEASE</spring-security.version>
@@ -1411,10 +1412,20 @@
             <artifactId>vaadin-client-compiler</artifactId>
 	    <version>${vaadin.version}</version>
          </dependency>
+	 <dependency>
+	    <groupId>org.vaadin.addons</groupId>
+	    <artifactId>exporter</artifactId>
+	    <version>0.0.5.4</version>
+	 </dependency>
+	 <dependency>
+   	    <groupId>org.vaadin.addons</groupId>
+   	    <artifactId>wizards-for-vaadin</artifactId>
+ 	    <version>1.0.0-beta1</version>
+	  </dependency>
           <dependency>
             <groupId>ru.xpoft.vaadin</groupId>
             <artifactId>spring-vaadin-integration</artifactId>
-            <version>1.8</version>
+	    <version>2.0.1</version>
           </dependency>
               <!-- AptView -->
 		    <dependency>
