changes on Widgetset

--- a/cdmlib-remote-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/cdmlib-remote-webapp/src/main/webapp/WEB-INF/web.xml
@@ -60,7 +60,7 @@
         <param-value>helloWorld</param-value>
       </init-param>
       <init-param> 
-        <description>Widget Set to Use</description>
+        <description>Application widgetset</description>
         <param-name>widgetset</param-name>
         <param-value>eu.etaxonomy.cdm.remote.webapp.view.widgetset.AppWidgetSet</param-value>
       </init-param>
