--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
         <module>cdmlib-remote-webapp</module>
     </modules>
     <properties>
-<!--	<vaadin.version>7.0.7</vaadin.version> -->
-	<vaadin.version>7.1.3</vaadin.version>
+	<vaadin.version>7.0.7</vaadin.version>
+	<!-- <vaadin.version>7.1.3</vaadin.version> -->
 	<java.codelevel>1.6</java.codelevel>
         <spring.version>3.2.2.RELEASE</spring.version>
         <spring-security.version>3.1.3.RELEASE</spring-security.version>
@@ -414,6 +414,11 @@
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-maven-plugin</artifactId>
 	    <version>${vaadin.version}</version>
+        <configuration>
+        <strict>true</strict>
+        <force>true</force>
+	     <webappDirectory>src/main/webapp/VAADIN/widgetsets</webappDirectory>
+        </configuration>
 	  </plugin>
         </plugins>
         <!--  -->
