--- a/pom.xml
+++ b/pom.xml
@@ -1066,12 +1066,28 @@
                 <artifactId>xom</artifactId>
                 <version>1.0</version>
             </dependency>
-	<!-- ******* SAXON ******* -->
+	<!-- ******* SAXON (ViBRANT)******* -->
 	<dependency>
 		<groupId>net.sf.saxon</groupId>
 		<artifactId>Saxon-HE</artifactId>
 		<version>9.5.1-2</version>
 	</dependency>
+	<!-- ******* http components (ViBRANT)******* -->
+	<dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpmime</artifactId>
+                <version>${httpcomponents.version}</version>
+	</dependency>
+<dependency>
+	<groupId>org.apache.httpcomponents</groupId>
+	<artifactId>httpmime</artifactId>
+	<version>4.2.3</version>
+</dependency>
+<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20090211</version>
+</dependency>
             <!-- ******* HIBERNATE / EJB3 ******* -->
        <dependency>
                 <groupId>org.hibernate.javax.persistence</groupId>
