update branch appimport

--- a/app-import/src/main/resources/log4j.properties
+++ b/app-import/src/main/resources/log4j.properties
@@ -45,7 +45,7 @@ log4j.logger.eu.etaxonomy.cdm.io.ProtologueImport = info
 log4j.logger.eu.etaxonomy.cdm.io.PalmaeImageImport = info
 log4j.logger.eu.etaxonomy.cdm.io.specimen = info
 log4j.logger.eu.etaxonomy.cdm.app.wp6.palmae.PalmaeTaxonXImportActivator = info
-
+log4j.logger.eu.etaxonomy.cdm.app.proibiosphere = info
 	### *** SPRING ************ ###
 log4j.logger.org.springframework.transaction = warn
 log4j.logger.org.hibernate.engine.LoadContexts = error
