--- a/cdmlib-services/src/test/resources/log4j.properties
+++ b/cdmlib-services/src/test/resources/log4j.properties
@@ -121,7 +121,7 @@ log4j.logger.org.hibernate.jdbc=info
 #log4j.logger.org.dbunit.operation.DeleteAllOperation=debug
 
 #### log spring security #####
-#log4j.logger.eu.etaxonomy.cdm.persistence.hibernate.permission=debug
+log4j.logger.eu.etaxonomy.cdm.persistence.hibernate.permission=debug
 log4j.logger.eu.etaxonomy.cdm.persistence.hibernate.permission.CdmAuthority=warn
 #log4j.logger.eu.etaxonomy.cdm.persistence.hibernate.CdmSecurityHibernateInterceptor=debug
 #log4j.logger.org.springframework.security.access.intercept=debug
