--- a/pom.xml
+++ b/pom.xml
@@ -863,12 +863,12 @@
                 <artifactId>httpclient</artifactId>
                 <version>${httpcomponents.version}</version>
             </dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpcore</artifactId>
-			<!--	<version>${httpcomponents.version}</version> -->
-				<version>4.2.4</version>
-			</dependency>
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpcore</artifactId>
+	<!--	<version>${httpcomponents.version}</version> -->
+		<version>4.2.4</version>
+		</dependency>
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
@@ -1072,10 +1072,10 @@
 		<artifactId>Saxon-HE</artifactId>
 		<version>9.5.1-2</version>
 	</dependency>
-	<dependency>
-		<groupId>org.apache.httpcomponents</groupId>
-		<artifactId>httpmime</artifactId>
-		<version>4.2.3</version>
+		<dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpmime</artifactId>
+                <version>${httpcomponents.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.json</groupId>
