simplifying and refactoring the distribution tree implementation, fixes problems in #3475 #2562 #3893

--- a/cdmlib-remote-webapp/src/main/resources/log4j.properties
+++ b/cdmlib-remote-webapp/src/main/resources/log4j.properties
@@ -1,3 +1,9 @@
+###############################################################################
+#
+# This log4j.properties file will be used when running executing
+# cdmlib-remote-webapp directly in a servelet container like jetty
+#
+###############################################################################
 #
 #
 # If you are having problems with logging you may debug Log4J initialization,
@@ -32,6 +38,7 @@ log4j.logger.eu.etaxonomy.cdm.remote.controller = INFO
 log4j.logger.eu.etaxonomy.cdm.remote.controller.interceptor = WARN
 #log4j.logger.eu.etaxonomy.cdm.remote.json.processor.AbstractCdmBeanProcessor  = DEBUG
 #log4j.logger.eu.etaxonomy.cdm.api.service.description.TransmissionEngineDistribution=DEBUG
+#log4j.logger.eu.etaxonomy.cdm.api.service.DistributionTree=DEBUG
 
 #     prevent CdmExceptionResolver from logging errors
 log4j.logger.eu.etaxonomy.cdm.remote.exception.CdmExceptionResolver = ERROR
