--- a/pom.xml
+++ b/pom.xml
@@ -1306,7 +1306,8 @@
                     <artifactId>spring-web</artifactId>
                   </exclusion>
                 </exclusions>
-            </dependency>            
+            </dependency>    
+                    
             
             <!-- ******* SERVLET/JSP/JSF ******* -->
             <dependency>
@@ -1433,6 +1434,11 @@
    	    <artifactId>wizards-for-vaadin</artifactId>
  	    <version>1.0.0-beta1</version>
 	  </dependency>
+	  <dependency>
+  	 	<groupId>com.vaadin.addon</groupId>
+   		<artifactId>jpacontainer</artifactId>
+   		<version>3.1.1</version>
+		</dependency>
           <dependency>
             <groupId>ru.xpoft.vaadin</groupId>
             <artifactId>spring-vaadin-integration</artifactId>
