pom.xml : added spring-security-remoting dependency for httpinvoker cdmlib-services/pom.xml : added spring-security-remoting dependency for httpinvoker remotingApplicationContext.xml : spring application context for remote clients remoting_services_security.xml : new secured services spring configuration for remoting purposes httpInvokerServiceClients.xml : spring configuration for client side http invoker service autowiring config.properties : properties file for server information (currently host name and context path) httpInvokerServices.xml : spring configuration for exposing services of the cdm server via http invoker GrantedAuthorityServiceImpl.java : added bean reference to Service annotation DatabaseServiceHibernateImpl.java : added bean reference to Service annotation ICdmApplicationConfiguration.java, ICdmApplicationRemoteConfiguration.java, ICdmApplicationLocalConfiguration : The earlier ICdmApplicationConfiguration is now split into two sub interfaces to handle local and remote cases CdmApplicationDefaultConfiguration.java : now implements ICdmApplicationLocalConfiguration CdmApplicationRemoteDefaultConfiguration.java : new configuration class to handle remoting CdmApplicationRemoteController.java : new controller class to handle remoting CdmApplicationController.java : now uses ICdmApplicationLocalConfiguration ConversationHolderMock.java : dummy conversation holder which does nothing ConversationHolder.java : changed constructor to protected to allow it to be subclassed remoting_persistence_security.xml : new secured persistence spring configuration for remoting purposes cdmlib-remote-servlet.xml : added services that should be exposed via http invoker

--- a/pom.xml
+++ b/pom.xml
@@ -1239,6 +1239,7 @@
                 <artifactId>org.springframework.context.support</artifactId>
                 <version>${spring.version}</version>
             </dependency> -->
+
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
@@ -1249,6 +1250,17 @@
                 <artifactId>org.springframework.oxm</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-remoting</artifactId>
+				<version>${spring-security.version}</version>
+				<exclusions>
+                  <exclusion>
+                    <groupId>org.springframework</groupId>
+                  	<artifactId>spring-web</artifactId>
+                  </exclusion>
+                </exclusions>
+			</dependency>            
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
