--- a/cdmlib-services/pom.xml
+++ b/cdmlib-services/pom.xml
@@ -110,6 +110,10 @@
       <artifactId>osgi</artifactId>
     </dependency>
     <dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-remoting</artifactId>			
+	</dependency>      
+    <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-config</artifactId>
     </dependency>
