--- a/cdmlib-services/pom.xml
+++ b/cdmlib-services/pom.xml
@@ -117,6 +117,18 @@
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-config</artifactId>
     </dependency>
+  	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-instrument</artifactId>		
+	</dependency>
+	<dependency>
+		<groupId>aspectj</groupId>
+		<artifactId>aspectjrt</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>aspectj</groupId>
+		<artifactId>aspectjweaver</artifactId>
+	</dependency>
     <dependency>
       <groupId>com.ibm.lsid</groupId>
       <artifactId>lsid-server</artifactId>
