--- a/pom.xml
+++ b/pom.xml
@@ -1234,6 +1234,21 @@
                 <artifactId>org.springframework.expression</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+            <dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-instrument</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>aspectj</groupId>
+				<artifactId>aspectjrt</artifactId>
+				<version>1.5.4</version>
+			</dependency>
+			<dependency>
+				<groupId>aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>1.5.4</version>
+			</dependency>
 <!--             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.context.support</artifactId>
