--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,8 @@ cdmlib-remote-webapp/.classpath
 cdmlib-remote-webapp/.project
 cdmlib-remote-webapp/.settings
 cdmlib-remote-webapp/src/main/java/eu
+cdmlib-remote-webapp/src/main/webapp/VAADIN/gwt-unitCache
+cdmlib-remote-webapp/src/main/webapp/VAADIN/widgetsets
 cdmlib-remote-webapp/target
 cdmlib-remote/.classpath
 cdmlib-remote/.project
