--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>3.3.1-SNAPSHOT</version>
     <name>CDM Library</name>
     <description>The Java implementation of the Common Data Model (CDM), the data model for EDIT's internet platform for cybertaxonomy.</description>
-    <url>http://wp5.e-taxonomy.eu/cdmlib/</url>
+    <url>http://cybertaxonomy.eu/cdmlib/</url>
     <inceptionYear>2007</inceptionYear>
     <packaging>pom</packaging>
     <modules>
@@ -26,7 +26,7 @@
 	<java.codelevel>1.6</java.codelevel>
         <spring.version>3.2.2.RELEASE</spring.version>
         <spring-security.version>3.1.3.RELEASE</spring-security.version>
-	<hibernate.version>4.1.10.Final</hibernate.version>
+	    <hibernate.version>4.1.10.Final</hibernate.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <unitils.version>3.3</unitils.version>
         <lucene.version>3.6.2</lucene.version>
@@ -157,10 +157,34 @@
         <url>http://dev.e-taxonomy.eu/trac/</url>
     </issueManagement>
     <ciManagement>
-        <system>Hudson</system>
-        <url>http://160.45.63.201/hudson</url>
+        <system>Jenkins</system>
+        <url>http://int.e-taxonomy.eu/jenkins</url>
     </ciManagement>
     <!-- **** REPOSITORIES **** -->
+    <profiles>
+        <profile>
+          <id>local-repository</id>
+          <activation>
+            <property>
+              <name>localrepo</name>
+            </property>
+          </activation>
+          <repositories>
+            <repository>
+              <id>EditLocalRepository</id>
+              <url>file://${localrepo}/eu/etaxonomy/</url>
+              <releases>
+                <enabled>false</enabled>
+                <updatePolicy>always</updatePolicy>
+              </releases>
+              <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+              </snapshots>
+            </repository>
+          </repositories>
+        </profile>
+      </profiles>
     <repositories>
         <!-- sun repository -->
         <repository>
@@ -1072,6 +1096,17 @@
                 <groupId>xom</groupId>
                 <artifactId>xom</artifactId>
                 <version>1.0</version>
+                <exclusions>
+                    <!-- 
+                        need to exclude com.ibm.icu:icu4j since it contains an invalid file 
+                        which causes the jetty-maven-plugin to fail
+                        see http://stackoverflow.com/questions/3026956/javassist-failure-in-hibernate-invalid-constant-type-60
+                    -->
+                    <exclusion>
+                        <groupId>com.ibm.icu</groupId>
+                        <artifactId>icu4j</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 			<!-- ******* SAXON (ViBRANT)******* -->
 			<dependency>
