--- a/pom.xml
+++ b/pom.xml
@@ -253,16 +253,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>${java.codelevel}</source>
                     <target>${java.codelevel}</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
-                <version>2.3.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
                 <configuration>
                     <argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
                     <runOrder>alphabetical</runOrder>
@@ -270,7 +271,6 @@
                         <include>**/*Test.java</include>
                     </includes>
                 </configuration>
-                <version>2.12</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -1374,6 +1374,10 @@
                   <exclusion>
                     <groupId>org.springframework</groupId>
                     <artifactId>spring-web</artifactId>
+                  </exclusion>
+                  <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-expression</artifactId>
                   </exclusion>
                 </exclusions>
             </dependency>    
