--- a/.gitattributes
+++ b/.gitattributes
@@ -1071,6 +1071,7 @@ cdmlib-model/src/main/resources/terms/NamedAreaType.csv -text
 cdmlib-model/src/main/resources/terms/NaturalLanguageTerm.csv -text
 cdmlib-model/src/main/resources/terms/NomenclaturalCode.csv -text
 cdmlib-model/src/main/resources/terms/NomenclaturalStatusType.csv -text
+cdmlib-model/src/main/resources/terms/NomenclaturalStatusTypeIczn.csv -text
 cdmlib-model/src/main/resources/terms/PlantKindOfUnit.csv -text
 cdmlib-model/src/main/resources/terms/PresenceTerm.csv -text
 cdmlib-model/src/main/resources/terms/PreservationMethod.csv -text
