--- a/cdmlib-remote/src/main/resources/log4j.properties
+++ b/cdmlib-remote/src/main/resources/log4j.properties
@@ -54,7 +54,9 @@ log4j.logger.net.sf.json.JSONObject = ERROR
 ###
 log4j.logger.org.hibernate=WARN
 #     log just the SQL
-log4j.logger.org.hibernate.SQL=WARN
+log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.engine.QueryParameters=debug
+#     log search
 log4j.logger.org.hibernate.search = ERROR
 #     log JDBC bind parameters
 log4j.logger.org.hibernate.type=WARN
