refactoring taxon controllers and thus solving #2595 (portal/taxon/{uuid}/accepted/{uuid} producing too big data objects)

--- a/cdmlib-remote/src/main/resources/log4j.properties
+++ b/cdmlib-remote/src/main/resources/log4j.properties
@@ -54,8 +54,8 @@ log4j.logger.net.sf.json.JSONObject = ERROR
 ###
 log4j.logger.org.hibernate=WARN
 #     log just the SQL
-log4j.logger.org.hibernate.SQL=debug
-log4j.logger.org.hibernate.engine.QueryParameters=debug
+log4j.logger.org.hibernate.SQL=WARN
+log4j.logger.org.hibernate.engine.QueryParameters=WARN
 #     log search
 log4j.logger.org.hibernate.search = ERROR
 #     log JDBC bind parameters
