fixing  #4151 (AdvancedBeanInitializer causes problems when initializing taxonnode hierarchies)

--- a/cdmlib-remote-webapp/src/main/resources/log4j.properties
+++ b/cdmlib-remote-webapp/src/main/resources/log4j.properties
@@ -33,7 +33,8 @@ log4j.logger.eu.etaxonomy.cdm = INFO
 # 	  avoid vast amount of "getCitation not yet implemented" & "getProblems not yet implemented" messages
 log4j.logger.eu.etaxonomy.cdm.model.name.TaxonNameBase = ERROR
 log4j.logger.eu.etaxonomy.cdm.database.UpdatableRoutingDataSource = INFO
-log4j.logger.eu.etaxonomy.cdm.persistence.dao.AbstractBeanInitializer = ERROR
+log4j.logger.eu.etaxonomy.cdm.persistence.dao.initializerAbstractBeanInitializer = ERROR
+log4j.logger.eu.etaxonomy.cdm.persistence.dao.initializer.AdvancedBeanInitializer=ERROR
 log4j.logger.eu.etaxonomy.cdm.remote.controller = INFO
 log4j.logger.eu.etaxonomy.cdm.remote.controller.interceptor = WARN
 #log4j.logger.eu.etaxonomy.cdm.remote.json.processor.AbstractCdmBeanProcessor  = DEBUG
