--- a/cdmlib-remote/src/main/resources/log4j.properties
+++ b/cdmlib-remote/src/main/resources/log4j.properties
@@ -27,7 +27,7 @@ log4j.logger.eu.etaxonomy.cdm = INFO
 # 	  avoid vast amount of "getCitation not yet implemented" & "getProblems not yet implemented" messages
 log4j.logger.eu.etaxonomy.cdm.model.name.TaxonNameBase = ERROR
 log4j.logger.eu.etaxonomy.cdm.database.UpdatableRoutingDataSource = INFO
-log4j.logger.eu.etaxonomy.cdm.persistence.dao.AbstractBeanInitializer = ERROR
+log4j.logger.eu.etaxonomy.cdm.persistence.dao.initializer.AbstractBeanInitializer = ERROR
 log4j.logger.eu.etaxonomy.cdm.remote.controller = INFO
 #log4j.logger.eu.etaxonomy.cdm.remote.json.processor.AbstractCdmBeanProcessor  = DEBUG
 log4j.logger.eu.etaxonomy.cdm.remote.controller.interceptor = WARN
