--- a/cdmlib-remote-webapp/src/main/resources/log4j.properties
+++ b/cdmlib-remote-webapp/src/main/resources/log4j.properties
@@ -62,11 +62,15 @@ log4j.logger.net.sf.json.JSONObject = ERROR
 # Hibernate
 ###
 log4j.logger.org.hibernate=WARN
-#     log just the SQL
-log4j.logger.org.hibernate.SQL=WARN
 log4j.logger.org.hibernate.search = ERROR
-#     log JDBC bind parameters
-log4j.logger.org.hibernate.type=WARN
+
+#     log just the SQL (DEBUG to see)
+log4j.logger.org.hibernate.SQL=ERROR
+log4j.logger.org.hibernate.engine.query=ERROR
+#     log JDBC bind parameters (TRACE to see)
+log4j.logger.org.hibernate.type=ERROR
+log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
+
 #     log schema export/update
 log4j.logger.org.hibernate.tool.hbm2ddl=WARN
 # This overcomes the proxy narrow log of hibernate
