logging json serialization

--- a/cdmlib-remote-webapp/src/main/resources/log4j.properties
+++ b/cdmlib-remote-webapp/src/main/resources/log4j.properties
@@ -41,6 +41,10 @@ log4j.logger.eu.etaxonomy.cdm.remote.controller.interceptor = WARN
 #log4j.logger.eu.etaxonomy.cdm.api.service.description.TransmissionEngineDistribution=DEBUG
 #log4j.logger.eu.etaxonomy.cdm.api.service.DistributionTree=DEBUG
 
+###
+# json serialization
+#log4j.logger.eu.etaxonomy.cdm.remote.json.processor.bean = DEBUG
+
 #     prevent CdmExceptionResolver from logging errors
 log4j.logger.eu.etaxonomy.cdm.remote.exception.CdmExceptionResolver = ERROR
 
