--- a/.gitattributes
+++ b/.gitattributes
@@ -2432,6 +2432,7 @@ src/site/apt/index.apt -text
 src/site/apt/oai-pmh.apt -text
 src/site/apt/overview.apt -text
 src/site/apt/reference.apt -text
+src/site/apt/remote/checklist-catalogue-default.apt -text
 src/site/apt/remote/name-catalogue-accepted.apt -text
 src/site/apt/remote/name-catalogue-default.apt -text
 src/site/apt/remote/name-catalogue-fuzzy.apt -text
