--- a/.gitattributes
+++ b/.gitattributes
@@ -2455,6 +2455,7 @@ src/site/apt/remote/search-fulltext-info.apt -text
 src/site/apt/remote/search-name-default.apt -text
 src/site/apt/remote/search-taxon-info.apt -text
 src/site/apt/rest-api-name-catalogue.apt -text
+src/site/apt/rest-api-occurrence-catalogue.apt -text
 src/site/apt/rest-api-search.apt -text
 src/site/apt/rest-api-statistics.apt -text
 src/site/apt/rest-api.apt -text
