--- a/cdmlib-services/pom.xml
+++ b/cdmlib-services/pom.xml
@@ -121,6 +121,11 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
     </dependency>
+    <dependency>
+	  <groupId>net.sf.ehcache</groupId>
+	  <artifactId>ehcache-core</artifactId>
+	  <version>2.6.9</version>
+	</dependency>
   </dependencies>
 </project>
 
