--- a/cdmlib-model/pom.xml
+++ b/cdmlib-model/pom.xml
@@ -239,5 +239,10 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
     </dependency>
+    <dependency>
+	  <groupId>net.sf.ehcache</groupId>
+	  <artifactId>ehcache-core</artifactId>
+	  <version>2.6.9</version>
+	</dependency>
   </dependencies>
 </project>
