first fully functional pure java based spring mvc configuration, vaadin has been excluded so far, welcome file configuration is working now in web.xml

--- a/cdmlib-remote-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/cdmlib-remote-webapp/src/main/webapp/WEB-INF/web.xml
@@ -5,62 +5,49 @@
     <description>cdmlib-remote web-application instance</description>
     <display-name>cdmlib-remote-webapp</display-name>
 
-  <!-- ==================================================================
-         load /WEB-INF/applicationContext.xml
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 
-         org.springframework.web.context.ContextLoaderListener defaults
-         to /WEB-INF/applicationContext.xml if contextConfigLocation
-         not set
-       ================================================================== -->
-    <!--
-     -->
     <listener>
+        <!-- loads /WEB-INF/applicationContext.xml -->
+        <!-- TODO check spring mvc 3.0 for a other ways to configure this -->
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
         </listener-class>
     </listener>
+    <!-- TODO was this ever needed?
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
-  <context-param>
-      <param-name>contextConfigLocation</param-name>
-      <param-value>/WEB-INF/applicationContext.xml</param-value>
-  </context-param>
-
-  <!-- ==================================================================
-         load other log4j.properties than that found in WEB-INF/classes/
-       ================================================================== -->
-    <!--
-      <listener>
-      <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
-  <context-param>
-      <param-name>log4jConfigLocation</param-name>
-      <param-value>/WEB-INF/classes/eu/etaxonomy/cdm/remote/log4j.properties</param-value>
-    </context-param>
      -->
 
     <servlet>
         <description>CDM Remote API</description>
         <servlet-name>cdmlib-remote</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <!--
-        <init-param>
-            <param-name>logVerbosityLevel</param-name>
-            <param-value>DEBUG</param-value>
-        </init-param>
-        -->
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>>
         <load-on-startup>1</load-on-startup>
     </servlet>
-     <servlet>
-           <servlet-name>Vaadin Application Servlet</servlet-name>
-        <servlet-class>ru.xpoft.vaadin.SpringVaadinServlet</servlet-class>
+
+    <servlet-mapping>
+        <servlet-name>cdmlib-remote</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+
+    <!-- =====================================
+                        VAADIN
+         =====================================-->
 <!-- better use -Dru.xpoft.vaadin.beanName=vaaditorUI
   <init-param>
         <description>Vaaditor</description>
         <param-name>beanName</param-name>
         <param-value>vaaditorUI</param-value>
       </init-param> -->
+      <!--
+     <servlet>
+           <servlet-name>Vaadin Application Servlet</servlet-name>
+     <servlet-class>ru.xpoft.vaadin.SpringVaadinServlet</servlet-class>
       <init-param>
         <description>Application widgetset</description>
         <param-name>widgetset</param-name>
@@ -75,58 +62,7 @@
       <servlet-name>Vaadin Application Servlet</servlet-name>
       <url-pattern>/edit/*</url-pattern>
     </servlet-mapping>
-
-
-<!-- DO NOT USE, this will block all other services and apps
-<servlet-mapping>
-      <servlet-name>Vaadin Application Servlet</servlet-name>
-      <url-pattern>/*</url-pattern>
-    </servlet-mapping> -->
-
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-
-    <servlet-mapping>
-        <servlet-name>cdmlib-remote</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.xsl</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.ico</url-pattern>
-    </servlet-mapping>
-        <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.html</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.png</url-pattern>
-    </servlet-mapping>
-     <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.jpg</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.css</url-pattern>
-    </servlet-mapping>
-     <servlet-mapping>
-        <servlet-name>default</servlet-name>
-        <url-pattern>*.js</url-pattern>
-    </servlet-mapping>
-
-
-    <!--
-        The welcome-file-list will be ignored since the cdmlib-remote servlet is mapped to the root path
-    <welcome-file-list>
-    </welcome-file-list>
-     -->
+       -->
 
   <filter>
     <filter-name>charsetFilter</filter-name>
