--- a/cdmlib-model/src/main/resources/ValidationMessages.properties
+++ b/cdmlib-model/src/main/resources/ValidationMessages.properties
@@ -26,3 +26,4 @@ eu.etaxonomy.cdm.validation.annotation.ChildTaxaMustNotSkipRanks.message=must no
 eu.etaxonomy.cdm.validation.annotation.InReference.wrongInReferenceForReferenceType.message=the reference type of the in-reference does not match to the reference type of the reference
 eu.etaxonomy.cdm.validation.annotation.InReference.ReferenceShouldNotHaveIsbn.message=the reference should not have an isbn
 eu.etaxonomy.cdm.validation.annotation.InReference.JournalShouldNotHaveDatePublished.message=a journal must not have a date published
+eu.etaxonomy.cdm.validation.annotation.NamePartsCase.message=Name parts must use the correct case (capital or lower case)
