--- a/.gitattributes
+++ b/.gitattributes
@@ -1826,6 +1826,29 @@ cdmlib-remote-webapp/src/main/webapp/js/jquery-ui-1.8.23.custom.min.js -text
 cdmlib-remote-webapp/src/main/webapp/js/jquery.blockUI.js -text
 cdmlib-remote-webapp/src/main/webapp/js/jquery.cookie.js -text
 cdmlib-remote-webapp/src/main/webapp/js/jquery.fileDownload.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/css/reset.css -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/css/screen.css -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/images/explorer_icons.png -text svneol=unset#unset
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/images/logo_small.png -text svneol=unset#unset
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/images/pet_store_api.png -text svneol=unset#unset
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/images/throbber.gif -text svneol=unset#unset
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/images/wordnik_api.png -text svneol=unset#unset
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/index.html -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/backbone-min.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/handlebars-1.0.0.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/highlight.7.3.pack.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/jquery-1.8.0.min.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/jquery.ba-bbq.min.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/jquery.slideto.min.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/jquery.wiggle.min.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/shred.bundle.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/shred/content.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/swagger-oauth.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/swagger.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/lib/underscore-min.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/o2c.html -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/swagger-ui.js -text
+cdmlib-remote-webapp/src/main/webapp/swagger-ui/swagger-ui.min.js -text
 cdmlib-remote-webapp/src/main/webapp/xsl/human.xsl -text
 cdmlib-remote-webapp/src/main/webapp/xsl/name.xsl -text
 cdmlib-remote-webapp/src/main/webapp/xsl/oai2.xsl -text
