--- a/pom.xml
+++ b/pom.xml
@@ -1017,7 +1017,11 @@
                 <artifactId>dozer</artifactId>
                 <version>5.3.0</version>
             </dependency>
-
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache-core</artifactId>
+                <version>2.4.3</version>
+            </dependency>
             <!-- ******* XML ******* -->
             <dependency>
                 <groupId>xml-apis</groupId>
