--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   
   <groupId>eu.etaxonomy.cdm</groupId>
   <artifactId>imports</artifactId>
-  <version>3.2.3-SNAPSHOT</version>
+  <version>3.3.0-SNAPSHOT</version>
   
   <name>App Import</name>
   <description>A collection of diverse imports to the EDIT CDM Platform</description>
@@ -19,11 +19,32 @@
   </scm>
   
   <dependencies>
-   	<dependency>
-  		<groupId>eu.etaxonomy</groupId>
+	<dependency>
+		<groupId>eu.etaxonomy</groupId>
   		<artifactId>cdmlib-io</artifactId>
   		<version>${project.version}</version>
   	</dependency>
+  	<dependency>
+  		<groupId>eu.etaxonomy</groupId>
+  		<artifactId>cdmlib-persistence</artifactId>
+  		<type>test-jar</type>
+        	<scope>test</scope>
+  		<version>${project.version}</version>
+  	</dependency>
+	<!-- <dependency>
+      		<groupId>org.unitils</groupId>
+		<artifactId>unitils-dbunit</artifactId>
+		<version>3.3</version>
+		<scope>test</scope>
+    	</dependency>
+    	<dependency>
+		<groupId>org.unitils</groupId>
+      		<artifactId>unitils-spring</artifactId>
+      		<version>3.3</version>
+      		<scope>test</scope>
+  	</dependency> -->
+
+
 <!--     <dependency>
     	<groupId>aspectj</groupId>
       	<artifactId>aspectjrt</artifactId>
