--- a/cdmlib-io/pom.xml
+++ b/cdmlib-io/pom.xml
@@ -127,6 +127,12 @@
 			<groupId>identificationKeyAPI</groupId>
 			<artifactId>identificationKeyAPI</artifactId>
 		</dependency>
+		<dependency>
+ 			<groupId>org.apache.jena</groupId>
+ 			<artifactId>apache-jena-libs</artifactId>
+ 			<type>pom</type>
+ 			<version>2.12.0</version>
+		</dependency>
 
 	</dependencies>
 </project>
