--- a/cdmlib-persistence/src/main/resources/spy.properties
+++ b/cdmlib-persistence/src/main/resources/spy.properties
@@ -42,7 +42,7 @@ module.log=com.p6spy.engine.logging.P6LogFactory
 # realdriver=oracle.jdbc.driver.OracleDriver
 
 # mysql Connector/J driver
-# realdriver=com.mysql.jdbc.Driver
+ realdriver=com.mysql.jdbc.Driver
 
 # informix driver
 # realdriver=com.informix.jdbc.IfxDriver
@@ -53,7 +53,7 @@ module.log=com.p6spy.engine.logging.P6LogFactory
 # the mysql open source driver
 #realdriver=org.gjt.mm.mysql.Driver
 #realdriver=com.mysql.jdbc.Driver
-realdriver=org.h2.Driver
+#realdriver=org.h2.Driver
 
 #specifies another driver to use
 realdriver2=
