--- a/cdmlib-commons/pom.xml
+++ b/cdmlib-commons/pom.xml
@@ -71,6 +71,12 @@
       <groupId>org.apache.maven.doxia</groupId>
       <artifactId>doxia-module-xhtml</artifactId>
     </dependency>
-
+<!-- Profiling -->
+	<dependency>
+		<groupId>com.yourkit</groupId>
+		<artifactId>yjp-controller-api-redist</artifactId>
+		<scope>test</scope>
+	</dependency>
+ 
   </dependencies>
 </project>
