--- a/cdmlib-io/pom.xml
+++ b/cdmlib-io/pom.xml
@@ -131,7 +131,7 @@
  			<groupId>org.apache.jena</groupId>
  			<artifactId>apache-jena-libs</artifactId>
  			<type>pom</type>
- 			<version>2.12.1-SNAPSHOT</version>
+ 			<version>2.11.2</version>
 		</dependency>
 
 	</dependencies>
