--- a/pom.xml
+++ b/pom.xml
@@ -955,6 +955,7 @@
 			<dependency>
 				<groupId>org.apache.jena</groupId>
 				<artifactId>apache-jena-libs</artifactId>
+				<type>pom</type>
 				<version>2.11.2</version>
 			</dependency>
 			
