adapt jena pom to work with parent version numbers

--- a/cdmlib-io/pom.xml
+++ b/cdmlib-io/pom.xml
@@ -129,7 +129,8 @@
 		</dependency>
 		<dependency>
  			<groupId>org.apache.jena</groupId>
- 			<artifactId>apache-jena-libs</artifactId>
+ 			<artifactId>jena-tdb</artifactId>
+ 			
 		</dependency>
 	</dependencies>
 </project>
