Fix (more of a hack) for conversation holder problem, subclassing the current servlet and setting the conversation so that it is bound every time a service call is made.

--- a/cdmlib-remote-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/cdmlib-remote-webapp/src/main/webapp/WEB-INF/web.xml
@@ -48,7 +48,7 @@
 
     <servlet>
       <servlet-name>Vaadin Application Servlet</servlet-name>
-      <servlet-class>ru.xpoft.vaadin.SpringVaadinServlet</servlet-class>
+      <servlet-class>eu.etaxonomy.cdm.remote.vaadin.service.CdmVaadinServlet</servlet-class>
       <init-param>
         <description>UISet for Vaadin</description>
         <param-name>beanName</param-name>
