--- a/pom.xml
+++ b/pom.xml
@@ -282,7 +282,7 @@
                 <configuration>
 					<source>${java.codelevel}</source>
                     <target>${java.codelevel}</target>
-                    <encoding>UTF-8</encoding>
+                    <encoding>UTF-8</encoding>  <!-- necessary? should be covered by project. properties source encoding-->
                 </configuration>
             </plugin>
             <plugin>
