add poi-ooxml and upgrade to 3.10-FINAL

--- a/cdmlib-commons/pom.xml
+++ b/cdmlib-commons/pom.xml
@@ -34,7 +34,14 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
     </dependency>
-    
+   	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml-schemas</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+	</dependency>
 	<dependency>
 	   <groupId>commons-lang</groupId>
 	   <artifactId>commons-lang</artifactId>
