--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
       <hsqldb.version>1.8.0.10</hsqldb.version><!-- 1.8.0.10, 1.9.0-rc6 (manualy build only for debugging) -->
       <httpcomponents.version>4.2.3</httpcomponents.version>
       <doxia.version>1.3</doxia.version>
+	  <poi.version>3.10-FINAL</poi.version>
     </properties>
     <scm>
         <connection>scm:svn:http://dev.e-taxonomy.eu/svn/trunk/cdmlib/</connection>
@@ -981,8 +982,19 @@
             <dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi</artifactId>
-                <version>3.9</version>
+                <version>${poi.version}</version>
             </dependency>
+			   	<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi-ooxml-schemas</artifactId>
+				<version>${poi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi-ooxml</artifactId>
+				<version>${poi.version}</version>
+			</dependency>
+			
             <dependency>
                 <groupId>org.apache.sanselan</groupId>
                 <artifactId>sanselan</artifactId>
